// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Invalid #1 1`] = `
"#### ⌨️ Code

      1 | query Q ($number: Int = 3) {
      2 |   sum(numbers: [1, $number, 3])
      3 | }

#### ❌ Error

      1 | query Q ($number: Int = 3) {
    > 2 |   sum(numbers: [1, $number, 3])
        |                    ^ Can't use nullable variable in non nullable position.
      3 | }"
`;

exports[`Invalid #2 1`] = `
"#### ⌨️ Code

      1 | query Q ($number: Int = 3) {
      2 |   addOne(number: $number)
      3 |   addOneSafe(number: $number)
      4 | }

#### ❌ Error

      1 | query Q ($number: Int = 3) {
    > 2 |   addOne(number: $number)
        |                  ^ Can't use nullable variable in non nullable position.
      3 |   addOneSafe(number: $number)"
`;

exports[`Invalid #3 1`] = `
"#### ⌨️ Code

      1 | query Q ($number: Int = 3) {
      2 |   addTwo(input: { left: $number, right: 2 })
      3 | }

#### ❌ Error

      1 | query Q ($number: Int = 3) {
    > 2 |   addTwo(input: { left: $number, right: 2 })
        |                         ^ Can't use nullable variable in non nullable position.
      3 | }"
`;
